--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
 
     <title>inHOUSE Film Festival</title>
 
-<link rel="stylesheet" href="css/pure-min.css">
+<link rel="stylesheet" href="/css/pure-min.css">
 
     <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/main-grid-old-ie.css">
+        <link rel="stylesheet" href="/css/main-grid-old-ie.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="css/main-grid.css">
+        <link rel="stylesheet" href="/css/main-grid.css">
     <!--<![endif]-->
   
     <!--[if lte IE 8]>
-        <link rel="stylesheet" href="css/layouts/marketing-old-ie.css">
+        <link rel="stylesheet" href="/css/layouts/marketing-old-ie.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="css/layouts/marketing.css">
-        <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="/css/layouts/marketing.css">
+        <link rel="stylesheet" href="/css/custom.css">
     <!--<![endif]-->
   
 
@@ -47,7 +47,7 @@
     </div>
 </div>
 <div id="sidebar-menu" class="pure-menu pure-menu-open pure-menu-fixed">
-    <img class="logo" src="img/inhouse-logo.jpg" />
+    <img class="logo" src="/img/inhouse-logo.jpg" />
     <ul id="std-menu-items">
         <li class="pure-menu-selected"><a href="#home">Home</a></li>
         <li><a href="#about-us">About Us</a></li>
@@ -93,14 +93,14 @@
         </div>
         <div class="about-content pure-g" data-content="who">
             <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-4-4 is-center">
-                <img class="team-pic" src="img/alay.jpg"/>
-                <img class="team-pic" src="img/cathleen.jpg"/>
-                <img class="team-pic" src="img/angelica.jpg"/>
-                <img class="team-pic" src="img/agnes.jpg"/>
-                <img class="team-pic" src="img/douglas.jpg"/>
+                <img class="team-pic" src="/img/alay.jpg"/>
+                <img class="team-pic" src="/img/cathleen.jpg"/>
+                <img class="team-pic" src="/img/angelica.jpg"/>
+                <img class="team-pic" src="/img/agnes.jpg"/>
+                <img class="team-pic" src="/img/douglas.jpg"/>
                 <br />
                 <a href="http://about.me/inhousefilmfestival" style="text-decoration: none; margin: 0 auto;">
-                    <img src="img/aboutme.png" />
+                    <img src="/img/aboutme.png" />
                 </a>
             </div>
         </div>
@@ -237,7 +237,7 @@
     <div class="content">
         <h2 class="content-head is-center">Gallery</h2>
         <div class="l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
-            <p><img src="img/poster.jpg" style="width: 100%"></p>
+            <p><img src="/img/poster.jpg" style="width: 100%"></p>
         </div>
     </div>
 
@@ -254,27 +254,27 @@
         </div>
         <div data-content="partner" class="credits-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text" style="display: block;">
             <h4>Haringey Arts</h4>
-            <p><img src="img/haringey-arts-logo.png" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            <p><img src="/img/haringey-arts-logo.png" style="width: 100px; float: left; margin: 0 5px 5px 0">
             A support fund set up in collaborations between Haringey Arts and the Landlord of warehouse living on Overbury Road, Catwalk Place and Arena. The in-kind and financial investment supports residents living in this cluster of warehouses to create new collaborations, events and initiatives that benefit both the warehouse community and the wider community within Haringey. To find out more visit <a href="//haringeyarts.com" target="_blank">www.haringeyarts.com</a></p>
             <h4>West Creative</h4>
-            <p><img src="img/west-creative-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            <p><img src="/img/west-creative-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
             West Creative bridges a gap between creativity and business. To date they have supported 75 creative professionals to win more work, build up networks and get their head around business planning…all for free through funded programme for people based in London. Find out how you can benefit here <a href="//westcreative.co/funded-business-support" target="_blank">westcreative.co</a></p>
             <h4>New River Studios</h4>
-            <p><img src="img/new-river-studios-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">New River Studios is a north London studio complex offering private spaces, music rehearsal and recording, film and video studios, hot-desking, cafe and gallery. <a href="//www.newriverstudios.com">newriverstudios.com</a></p></br>
+            <p><img src="/img/new-river-studios-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">New River Studios is a north London studio complex offering private spaces, music rehearsal and recording, film and video studios, hot-desking, cafe and gallery. <a href="//www.newriverstudios.com">newriverstudios.com</a></p></br>
             <h4>The Lost Picture Show</h4>
-            <p><img src="img/lps-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Lost Picture Show aim to revive the magic and romance of “going to the pictures” through creating immersive, spectacular cinema events. They have taken their show to the mud-splattered fields of Glastonbury, The Big Chill and Shambala festivals, to film festivals, and to various rooftops, basements, bunkers and public spaces across London and further afield. <a href="//lostpictureshow.org" target="_blank">lostpictureshow.org</a></p>
+            <p><img src="/img/lps-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Lost Picture Show aim to revive the magic and romance of “going to the pictures” through creating immersive, spectacular cinema events. They have taken their show to the mud-splattered fields of Glastonbury, The Big Chill and Shambala festivals, to film festivals, and to various rooftops, basements, bunkers and public spaces across London and further afield. <a href="//lostpictureshow.org" target="_blank">lostpictureshow.org</a></p>
             <h4>No/Gloss Film Festival</h4>
-            <p><img src="img/nogloss-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">No/Gloss Film Festival is Leeds' independent film festival, the city's first ever DIY film festival celebrating do-it-yourself unconventional cinema and low / no budget films from independent local and international film-makers. <a href="//noglossfilmfestival.co.uk" target="_blank">noglossfilmfestival.co.uk</a></p>
+            <p><img src="/img/nogloss-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">No/Gloss Film Festival is Leeds' independent film festival, the city's first ever DIY film festival celebrating do-it-yourself unconventional cinema and low / no budget films from independent local and international film-makers. <a href="//noglossfilmfestival.co.uk" target="_blank">noglossfilmfestival.co.uk</a></p>
             <h4>London Photo Festival</h4>
-            <p><img src="img/london-photo-festival-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            <p><img src="/img/london-photo-festival-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">
             Are you passionate about photography? We created the London Photo Festival in 2011 to showcase up and coming talent like yours. The principle behind the LPF is we don't evaluate your images. It's what sets us apart from other exhibitions, festivals and galleries <a href="//londonphotofestival.org" target="_blank">londonphotofestival.org</a>
             </p>
             <h4>LSFF</h4>
-            <p><img src="img/lsff-logo.jpeg" style="width: 100px; float: left; margin: 0 5px 5px 0">LSFF is an annual event that presents the best in UK short film-making talent. For a couple of weeks in January we take over London's best independent cinemas and venues to showcase some amazing short films. Oh, and we throw in a bunch of live music and parties too. So let's get to know each other — come find us on <a href="//facebook.com/londonshortfilmfestival" target="_blank">Facebook</a> or follow us on <a href="//twitter.com/#!/LSFF" target="_blank">Twitter</a>.</p>
+            <p><img src="/img/lsff-logo.jpeg" style="width: 100px; float: left; margin: 0 5px 5px 0">LSFF is an annual event that presents the best in UK short film-making talent. For a couple of weeks in January we take over London's best independent cinemas and venues to showcase some amazing short films. Oh, and we throw in a bunch of live music and parties too. So let's get to know each other — come find us on <a href="//facebook.com/londonshortfilmfestival" target="_blank">Facebook</a> or follow us on <a href="//twitter.com/#!/LSFF" target="_blank">Twitter</a>.</p>
             <h4>Catwalk Collective</h4>
-            <p><img src="img/catwalk-collective-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Catwalk Collective build collaborative events powered by the boundless enthusiasm of our volunteers and fuelled by the maelstrom of ideas that the Manor House Warehouse Community generates. Our aim is to bring these talents to the surface for the benefit of our members and the enjoyment of everyone. <a href="facebook.com/CatwalkCollective" target="_blank">facebook.com/CatwalkCollective</a></p>
+            <p><img src="/img/catwalk-collective-logo.jpg" style="width: 100px; float: left; margin: 0 5px 5px 0">The Catwalk Collective build collaborative events powered by the boundless enthusiasm of our volunteers and fuelled by the maelstrom of ideas that the Manor House Warehouse Community generates. Our aim is to bring these talents to the surface for the benefit of our members and the enjoyment of everyone. <a href="facebook.com/CatwalkCollective" target="_blank">facebook.com/CatwalkCollective</a></p>
             <h4>Starlight Design</h4>
-            <p><img src="img/starlight-design-logo.gif" style="width: 100px; float: left; margin: 0 5px 5px 0">
+            <p><img src="/img/starlight-design-logo.gif" style="width: 100px; float: left; margin: 0 5px 5px 0">
             We are an event production company with over 30 years experience of creating events that go beyond spectacular. Specialising in set design, lighting, sound, AV, fireworks, power distribution and event production using the very latest technology with our own blend of creative input and experience to guarantee results that exceed our client's expectations.<a href="//starlightdesign.co.uk/" target="_blank">www.starlightdesign.co.uk/</a></p>
         </div>
         <div data-content="contributor" class="credits-content l-box pure-u-1 pure-u-med-2-2 pure-u-lrg-2-2 centered-text">
@@ -341,9 +341,9 @@
 
 </div>
 <!-- AddThisEvent -->
-<script type="text/javascript" src="js/atemay.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/yui.js"></script>
+<script type="text/javascript" src="/js/atemay.js"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/yui.js"></script>
 <script>
 YUI().use('node-base', 'node-event-delegate', function (Y) {
     // This just makes sure that the href="#" attached to the <a> elements
@@ -369,8 +369,8 @@ YUI({
 
 });
 </script>
-<script src="js/jquery.scrollto.min.js"></script>
-<script src="js/jquery.localscroll.js"></script>
-<script src="js/ihff.js"></script>
+<script src="/js/jquery.scrollto.min.js"></script>
+<script src="/js/jquery.localscroll.js"></script>
+<script src="/js/ihff.js"></script>
 </body>
 </html>
